# glifparser.rlib

./: .gitignore  AUTHORS  Cargo.toml  Makefile  README.md  crates.js  search-index.js  settings.html  source-files.js
arrayvec/: struct.ArrayString.html  struct.ArrayVec.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html
bytemuck/: all.html  enum.PodCastError.html  index.html
color_quant/: all.html  index.html  struct.NeuQuant.html
flo_curves/: all.html  index.html  sidebar-items.js  trait.BezierCurve.html  trait.BezierCurveFactory.html  trait.Line.html
float_cmp/: all.html  index.html  macro.approx_eq.html  macro.assert_approx_eq.html  struct.F32Margin.html  struct.F64Margin.html  trait.ApproxEq.html  trait.ApproxEqRatio.html  trait.ApproxEqUlps.html  trait.Ulps.html
gif/: all.html  enum.Block.html  enum.ColorOutput.html  enum.Decoded.html  enum.DecodingError.html  enum.DisposalMethod.html  enum.EncodingError.html  enum.Extension.html  enum.ExtensionData.html  enum.Extensions.html  enum.Repeat.html  enum.Version.html  index.html  struct.AnyExtension.html  struct.DecodeOptions.html  struct.Decoder.html  struct.DecodingFormatError.html  struct.Encoder.html  struct.Frame.html  struct.MemoryLimit.html  struct.StreamingDecoder.html
glifparser/: all.html  enum.IntegerOrFloat.html  fn.read.html  fn.read_from_filename.html  fn.read_from_filename_pedantic.html  fn.read_pedantic.html  fn.write.html  fn.write_to_filename.html  index.html  sidebar-items.js  trait.Codepoint.html  trait.IsValid.html  trait.PointLike.html
image/: all.html  enum.ColorType.html  enum.DynamicImage.html  enum.ExtendedColorType.html  enum.ImageFormat.html  enum.ImageOutputFormat.html  fn.guess_format.html  fn.image_dimensions.html  fn.load.html  fn.load_from_memory.html  fn.load_from_memory_with_format.html  fn.open.html  fn.save_buffer.html  fn.save_buffer_with_format.html  fn.write_buffer_with_format.html  index.html  struct.Delay.html  struct.Frame.html  struct.Frames.html  struct.ImageBuffer.html  struct.Luma.html  struct.LumaA.html  struct.Pixels.html  struct.Progress.html  struct.Rgb.html  struct.Rgba.html  struct.SubImage.html  trait.AnimationDecoder.html  trait.EncodableLayout.html  trait.GenericImage.html  trait.GenericImageView.html  trait.ImageDecoder.html  trait.ImageDecoderRect.html  trait.ImageEncoder.html  trait.Pixel.html  trait.PixelWithColorType.html  trait.Primitive.html  type.GrayAlphaImage.html  type.GrayImage.html  type.Rgb32FImage.html  (+3 more)
integer_or_float/: all.html  enum.ConversionError.html  enum.IntegerOrFloat.html  index.html  sidebar-items.js
jpeg_decoder/: all.html  enum.CodingProcess.html  enum.ColorTransform.html  enum.Error.html  enum.PixelFormat.html  enum.UnsupportedFeature.html  index.html  struct.Decoder.html  struct.ImageInfo.html
kurbo/: all.html  constant.DEFAULT_ACCURACY.html  constant.MAX_EXTREMA.html  enum.PathEl.html  enum.PathSeg.html  enum.SvgParseError.html  fn.cubics_to_quadratic_splines.html  fn.flatten.html  fn.segments.html  index.html  sidebar-items.js  struct.Affine.html  (+34 more)
(+8172 files in other folders)
