[package]
name = "glifparser"
version = "1.0.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"

[dependencies]
xmltree = "0.10.3"
log = "0.4"
kurbo = {version = "0.8", features = ["serde"]}
trees = "0.4"
skia-safe = {version = "0.42", optional = true}
image = { version = "0.23", features = ["png"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plist = "1"

# Our submodules
integer_or_float = { git = "https://github.com/MFEK/integer_or_float.rlib", branch = "main" }

[dev-dependencies]
env_logger = "0.8"

[features]
skia = ["skia-safe"]
mfek = ["skia"]
