[package]
name = "glifparser"
version = "1.1.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"

[dependencies]
xmltree = "0.10.3"
log = "0.4"
kurbo = { version = "0.8", default-features = false }
trees = "0.4"
skia-safe = { version = "0", optional = true }
image = { version = "0.23", features = ["png"], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
plist = { git = "https://github.com/ebarnard/rust-plist", default-features = false }

# Our submodules
# The default feature is serde, dep:serde syntax still (Oct '21) not stabilized
integer_or_float = { git = "https://github.com/MFEK/integer_or_float.rlib", branch = "main", default-features = false }

[dev-dependencies]
env_logger = "0.9"

[features]
glifimage = ["image"]
glifserde = ["serde", "kurbo/serde", "integer_or_float/default", "plist/default"]
default = ["glifimage", "glifserde"]
skia = ["default", "skia-safe"]
mfek = ["default", "skia"]
