[package]
name = "glifparser"
version = "1.2.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>", "MFEK Authors"]
edition = "2021"
license = "Apache-2.0"
keywords = ["glif", "parsers", "ufo-format", "fonts"]

[dependencies]
xmltree = { version = "0.10", features = ["attribute-order"] }
log = "0.4"
kurbo = { version = "0.8", default-features = false }
trees = "0.4"
skia-safe = { version = "0", optional = true }
image = { version = "0.23", features = ["png"], default-features = false, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
plist = "1.3"
itertools = "0.10"
flo_curves = { version = "0.6", optional = true }
float-cmp = "0.9"

# Our submodules
# The default feature is serde, dep:serde syntax still (Oct '21) not stabilized
integer_or_float = { git = "https://github.com/MFEK/integer_or_float.rlib", branch = "main", default-features = false, features = ["hash"] }

[dev-dependencies]
env_logger = "0.9"
test-log = "0.2"
lazy_static = "1.4"

[features]
glifimage = ["image"]
glifserde = ["serde", "kurbo/serde", "integer_or_float/default", "plist/default"]
default = ["glifimage", "glifserde"]
skia = ["default", "skia-safe"]
mfek = ["default", "skia"]
more-image-formats = ["image/gif", "image/jpeg", "image/webp", "image/bmp", "image/tiff"]
